fixed wrong color overlay

--- a/src/app/styles/AuthPane.module.css
+++ b/src/app/styles/AuthPane.module.css
@@ -1,5 +1,5 @@
 :root{
-    --auth-main-bg-color: rgb(35, 35, 35) !important;
+    --auth-main-bg-color: rgb(30, 30, 30) !important;
     --text-app-name-color: rgb(255, 255, 255) !important;
     --text-description-color: rgba(170, 170, 170, 1) !important;
     --input-bg-color: rgba(45, 45, 45, 1) !important;
