--- a/src/app/styles/ProfileEdit.module.css
+++ b/src/app/styles/ProfileEdit.module.css
@@ -1,13 +1,14 @@
 :root{
-    --main-bg-color: rgba(30, 30, 30, 1) !important;
+    --profile-bg-color: rgb(30, 30, 30) !important;
     --button-bg-default-color: rgba(147, 135, 216, 1) !important;
     --button-bg-hover-color: rgba(127, 112, 214, 1) !important;
     --photo-select-border-color: rgba(255, 255, 255, 0.25);
     --modal-bg-color:  rgba(30, 30, 30, 1) !important;
+    --p-text-color: rgba(200, 200, 200, 0.9) !important;
 }
 
 .global{
-    background-color: var(--main-bg-color);
+    background-color: var(--profile-bg-color);
     display: flex;
     width: 100%;
     justify-content: center;
@@ -26,7 +27,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: var(--main-bg-color);
     height: 100vh;
     width: 100%;
 }
@@ -35,6 +35,11 @@ h1{
     font-size: 20pt;
     align-self: center;
     color: white;
+}
+
+p{
+    font-size: 11pt;
+    color: var(--p-text-color);
 }
 
 .photo{
